fix: scrollbar style for body

--- a/frontend/src/assets/scrollbar.css
+++ b/frontend/src/assets/scrollbar.css
@@ -6,6 +6,10 @@
   display: none !important;
 }
 
+body {
+  overflow-y: scroll;
+}
+
 /* ===== Scrollbar CSS ===== */
 /* Firefox */
 * {
